--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
@@ -119,7 +119,7 @@ table
   text-align:               left;
   font-size:                0.8em;
   color:                    #FFFFFF;
-  width:                    35%;
+  width:                    30%;
   height:                   30px;
 }
 
@@ -165,7 +165,7 @@ table
 {
   margin-top:               5px;
   float:                    left;
-  width:                    30%;
+  width:                    40%;
   text-align:               right;
 }
 
@@ -277,10 +277,10 @@ table
 
 #oc_video-cc
 {
-  margin-top:               7px;
+  margin-top:               5px;
   float:                    left;
   width:                    5%;
-  text-align:               left;
+  text-align:               center;
   visibility:               hidden;
 }
 
@@ -288,7 +288,7 @@ table
 {
   margin-top:               7px;
   float:                    right;
-  width:                    10%;
+  width:                    5%;
 }
 
 .oc_tabs
