--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -13,7 +13,10 @@
  *  permissions and limitations under the License.
  *
  */
- 
+#oc_image
+{
+  width:                    100%;
+} 
 
 #oc_embed-title-bar
 {
@@ -41,7 +44,6 @@
 #oc-link-advanced-player
 {
   display:                  none;
-
 }
 
 body
@@ -62,7 +64,6 @@ table
 #oc_body
 {
   height:                   510px;
-
   position:                 relative; 
 }
 
@@ -78,6 +79,7 @@ table
   width:                    100%;
   background-image:         url("../img/oc_icons.png");
   background-position:      0 0px;
+  visibility:               hidden;
 }
 
 #oc_video-time
@@ -86,26 +88,25 @@ table
   text-align:               left;
   font-size:                0.8em;
   color:                    #FFFFFF;
-  margin-top:               5px;
-/*  background-image:         url("../img/icons.png");
-  background-position:      0 0; */
-  width:                    30%;
+  margin-top:               7px;
+  width:                    35%;
   height:                   30px;
 }
 
 #simpleEdit 
 {
-  margin-left:              10px;
-  font-size:                1.2em;
+  margin-left:              5px;
+  font-size:                1.0em;
 }
 
 .oc_current-time
 {
   cursor:                   pointer;
   cursor:                   hand;
-  width:                    64px !important;
+  width:                    60px !important;
   background-color:         transparent !important;
   color:                    #FFFFFF;
+  text-align:               right;
 }
 
 .oc_current-time-hide
@@ -115,16 +116,18 @@ table
 
 .oc_edit-time
 {
-  width:                    64px !important;
+  width:                    60px !important;
   background-color:         #E3E3D7 !important;
   color:                    #000000;
+  text-align:               right;
 }
 
 .oc_edit-time-error
 {
-  width:                    64px !important;
+  width:                    60px !important;
   background-color:         #ff0000;  
   color:                    #ffffff; 
+  text-align:               right;
 }
 .oc_edit-time-hide
 {
@@ -134,17 +137,17 @@ table
 #oc_video-controls
 {
   float:                    left;
-  width:                    40%;
+  width:                    30%;
   text-align:               right;
-  margin-top:               5px;
+  margin-top:               7px;
 }
 
 #oc_sound
 {
   margin-top:               5px;
   float:                    left;
-  width:                    5%;
-  text-align:               center;
+  width:                    25%;
+  text-align:               right;
 }
 
 #oc_volume-menue
@@ -160,11 +163,11 @@ table
 
 #oc_player_video-dropdown
 {
-    position:               absolute; 
-    background-color:       black;
-    z-index:                10000;
-    visibility:             hidden;
-    padding-bottom:         5px;
+  position:                 absolute; 
+  background-color:         black;
+  z-index:                  10000;
+  visibility:               hidden;
+  padding-bottom:           5px;
 }
 
 #oc_volume-dropdown
@@ -172,38 +175,12 @@ table
   margin:                   0;
   padding:                  0;
   float:                    left;
-  margin-right:             10px;
+  margin-right:             5px;
 }
-
-/*
-#oc_volume-dropdown li
-{   
-  float:                    left;
-  list-style:               none;
-}
-    
-#oc_volume-dropdown li ul
-{
-  margin:                   0;
-  padding:                  0;
-  position:                 absolute;
-  visibility:               hidden;
-  border-top:               1px solid white
-}   
-        
-#oc_volume-dropdown li ul li
-{   
-  float:                    none;
-  display:                  inline;
-}
-*/
 
 #oc_volume-dropdown-div
 {   
   height:                   28px;
-  /*padding-top:              4px;
-  background-image:         url("../img/icons.png"); 
-  background-position:      0 -4px; */
   text-align:               center;
   margin-left:              -50px;
 }
@@ -221,11 +198,11 @@ table
   padding:                  2px;
   text-align:               center;
   -moz-border-radius :      5px 5px 5px 5px;
-  -webkit-border-radius :    5px 5px 5px 5px;
+  -webkit-border-radius :   5px 5px 5px 5px;
   border :                  1px solid #f8bb22;
   color :                   #000000;
   background-color:         #fae6a0;
-  font-size :                   14;
+  font-size :               14;
   left:                     120px;
   top:                      380px;
   cursor:                   default !important;
@@ -308,66 +285,32 @@ table
   margin:                   0;
   padding:                  0;
   float:                    right;
-  margin-right:             10px;
-}
-
-#oc_video-size-dropdown li
-{   
-  float:                    left;
-  list-style:               none;
-}
-    
-#oc_video-size-dropdown li ul
-{
-  margin:                   0;
-  padding:                  0;
-  position:                 absolute;
-  visibility:               hidden;
-  border-top:               1px solid white
-}   
-        
-#oc_video-size-dropdown li ul li
-{   
-  float:                    none;
-  display:                  inline;
-}
-        
-#oc_video-size-dropdown li ul li a
-{   
-  background:               #000000;
-}
-
-#oc_video-size-dropdown li ul li a:hover
-{   
-  background:               #000000; 
+  margin-right:             5px;
 }
 
 #oc_video-size-dropdown-div
 {   
   height:                   28px;
-  /*padding-top:              4px;
-  background-image:         url("../img/icons.png");
-  background-position:      0 -4px;*/
   text-align:               center;
 }
 
 
 .oc_progress-bar
 {
-    border:                 0px solid #D3D3D3;
-    color:                  #555555;
-    font-weight:            normal;
-    outline-color:          -moz-use-text-color;
-    outline-style:          none;
-    outline-width:          none;
-    display:                inline; 
-    position:               absolute; 
-    height:                 0.8em; 
-    word-spacing:           1px;
-    background-color:       rgb(255, 255, 255);
-   -moz-border-radius:      0.2em;
-   -webkit-border-radius:   0.2em;
-    background-color:       #7B7EAE;
+  border:                   0px solid #D3D3D3;
+  color:                    #555555;
+  font-weight:              normal;
+  outline-color:            -moz-use-text-color;
+  outline-style:            none;
+  outline-width:            none;
+  display:                  inline; 
+  position:                 absolute; 
+  height:                   0.8em; 
+  word-spacing:             1px;
+  background-color:         rgb(255, 255, 255);
+ -moz-border-radius:        0.2em;
+ -webkit-border-radius:     0.2em;
+  background-color:         #7B7EAE;
 }
 
 .scrubber-button 
@@ -376,8 +319,6 @@ table
   background-position:      -60px -360px;
   height:                   19px;
   width:                    9px;
-  /*margin-top:               -4px;
-  margin-left:              -6px;*/
   position:                 relative; 
   border:                   0px;
   top:                      0px; 
@@ -391,8 +332,6 @@ table
   background-position:      -60px -360px;
   height:                   19px;
   width:                    9px;
-  /*margin-top:               -4px;
-  margin-left:              -6px;*/
   position:                 relative; 
   border:                   0px;
   top:                      -19px;
@@ -402,127 +341,117 @@ table
 
 .progress-segment 
 {
-  border-bottom-color:#BDBDBD;
-  border-bottom-style:solid;
-  border-bottom-width:1px;
+  border-bottom-color:      #BDBDBD;
+  border-bottom-style:      solid;
+  border-bottom-width:      1px;
   border-left-color-ltr-source:physical;
   border-left-color-rtl-source:physical;
-  border-left-color-value:#EAEAEA;
+  border-left-color-value:  #EAEAEA;
   border-left-style-ltr-source:physical;
   border-left-style-rtl-source:physical;
-  border-left-style-value:solid;
+  border-left-style-value:  solid;
   border-left-width-ltr-source:physical;
   border-left-width-rtl-source:physical;
-  border-left-width-value:1px;
-  border-top-color:#EAEAEA;
-  border-top-style:solid;
-  border-top-width:1px;
-  padding-bottom:0;
-  padding-left:0;
-  padding-right:0;
-  padding-top:0;
+  border-left-width-value:  1px;
+  border-top-color:         #EAEAEA;
+  border-top-style:         solid;
+  border-top-width:         1px;
+  padding-bottom:           0;
+  padding-left:             0;
+  padding-right:            0;
+  padding-top:              0;
 }
 
 .progress-list 
 {
-  /*background-image:url("../img/icons.png");
-  background-position: 0 -432px;*/
-  background-color:                    #FFFFFF;
-  height: 7px;
+  background-color:         #FFFFFF;
+  height:                   7px;
 }
 
 .load-progress 
 {
-  /*background-image:url("../img/icons.png");
-  background-position: 0 -419px;*/
-  background-color:                    #E99A8F;
-  height: 7px;
-  display:block;
-  margin-top:0;
-  position:relative;
-  width: 0;
+  background-color:         #E99A8F;
+  height:                   7px;
+  display:                  block;
+  margin-top:               0;
+  position:                 relative;
+  width:                    0;
 }
 
 .play-progress 
 {
-  /*background-image:url("../img/icons.png");
-  background-position: 0 -405px;*/
-  background-color:                    #DE6555;
-  display:block;
-  height:7px;
-  margin-top:-7px;
-  position:relative;
+  background-color:         #DE6555;
+  display:                  block;
+  height:                   7px;
+  margin-top:               -7px;
+  position:                 relative;
 }
-
 
 .scrubber-channel 
 {
-  display:block;
-  margin-top:0;
-  padding-right:0px;
-  position:relative;
-  top: -7px;
-  height: 7px;
+  display:                  block;
+  margin-top:               0;
+  padding-right:            0px;
+  position:                 relative;
+  top:                      -7px;
+  height:                   7px;
 }
 .progress-text 
 {
-  display:block;
-  font-family:Lucida Grande,Lucida San Unicode,Helvetica,Arial,sans-serif;
-  font-size:10px;
-  
+  display:                  block;
+  font-family:              Lucida Grande,Lucida San Unicode,Helvetica,Arial,sans-serif;
+  font-size:                10px;
 }
-
-
 
 .segment-holder 
 {
-  background-image:url("../img/scrubber.gif");
-  height:25px;
-  border-bottom-color:#000000;
-  border-bottom-style:solid;
-  border-bottom-width:1px;
-  border-right-color:#000000;
-  border-right-style:solid;
-  border-right-width:1px;
-  border-right-color:#000000;
-  border-right-style:solid;
-  border-right-width:1px;
-  border-top-color:#000000;
-  border-top-style:solid;
-  border-top-width:1px;
-  padding-bottom:0.0em;
-  padding-left:0.0em;
-  padding-right:0.0em;
-  padding-top:0.0em;
+  background-image:         url("../img/scrubber.gif");
+  height:                   25px;
+  border-bottom-color:      #000000;
+  border-bottom-style:      solid;
+  border-bottom-width:      1px;
+  border-right-color:       #000000;
+  border-right-style:       solid;
+  border-right-width:       1px;
+  border-right-color:       #000000;
+  border-right-style:       solid;
+  border-right-width:       1px;
+  border-top-color:         #000000;
+  border-top-style:         solid;
+  border-top-width:         1px;
+  padding-bottom:           0.0em;
+  padding-left:             0.0em;
+  padding-right:            0.0em;
+  padding-top:              0.0em;
 }
 
 .segment-holder-over 
 {
-  background-image:url("../img/scrubber.gif");
-  background-position:0 -20px;
-  height:25px;
-  border-bottom-color:#000000;
-  border-bottom-style:solid;
-  border-bottom-width:1px;
-  border-right-color:#000000;
-  border-right-style:solid;
-  border-right-width:1px;
-  border-right-color:#000000;
-  border-right-style:solid;
-  border-right-width:1px;
-  border-top-color:#000000;
-  border-top-style:solid;
-  border-top-width:1px;
-  padding-bottom:0.0em;
-  padding-left:0.0em;
-  padding-right:0.0em;
-  padding-top:0.0em;
+  background-image:         url("../img/scrubber.gif");
+  background-position:      0 -20px;
+  height:                   25px;
+  border-bottom-color:      #000000;
+  border-bottom-style:      solid;
+  border-bottom-width:      1px;
+  border-right-color:       #000000;
+  border-right-style:       solid;
+  border-right-width:       1px;
+  border-right-color:       #000000;
+  border-right-style:       solid;
+  border-right-width:       1px;
+  border-top-color:         #000000;
+  border-top-style:         solid;
+  border-top-width:         1px;
+  padding-bottom:           0.0em;
+  padding-left:             0.0em;
+  padding-right:            0.0em;
+  padding-top:              0.0em;
 }
 
 .segments 
 {
-  border-left-color:#000000;
-  border-left-style:solid;
-  border-left-width:1px;
-  width: 100%;
+  border-left-color:        #000000;
+  border-left-style:        solid;
+  border-left-width:        1px;
+  width:                    100%;
 }
